--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,7 @@ ul{
 
     .box .container .body .text h2 {
         font-size: 26px;
+        color: hsl(295.25deg 67.15% 59.41%);
     }
 
     .box .container .body .text p {
