--- a/css/main.css
+++ b/css/main.css
@@ -1,157 +1,192 @@
-body {
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Open Sans', sans-serif;
-    margin: 0;
-    padding: 0;
+:root {
+  --Violet: hsl(257, 40%, 49%);
+  --Soft-Magenta: hsl(300, 69%, 71%);
 }
-ul{
-    list-style: none;
+* {
+  box-sizing: border-box;
+}
+body {
+  font-family: "Poppins", sans-serif;
+  font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+ul {
+  list-style: none;
 }
 
 .container {
-    padding: 0 15px;
-    margin: 0 auto;
+  padding: 0 15px;
+  margin: 0 auto;
 }
 
-@media(min-width:768px) {
-    .container {
-        width: 750px;
-    }
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
 }
 
-@media(min-width:992px) {
-    .container {
-        width: 970px;
-    }
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
 }
 
-@media(min-width:1200px) {
-    .container {
-        width: 1170px;
-    }
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
 }
-
 
 .box {
-    background-image: url(../images/bg-desktop.svg);
-    background-color: hsl(257, 40%, 49%);
-    background-size: cover;
-    height: 100vh;
+  background-image: url(../images/bg-desktop.svg);
+  background-color: var(--Violet);
+  background-size: cover;
+  height: 100vh;
 }
-.box .container .head .image img {
-    width: 200px;
-    padding: 50px 0;
+.box .container header .image img {
+  width: 200px;
+  margin: 50px 0;
+  transition: 0.5s;
+}
+.box .container header .image img:hover {
+  box-shadow: 0px 1px 6px 2px var(--Soft-Magenta);
 }
 .box .container .body {
-    display: flex;
-    justify-content: space-between;
-    gap: 0px;
+  display: flex;
+  justify-content: space-between;
+  gap: 0px;
 }
 .box .container .body .box-try {
-    flex-basis: 50%;
+  flex-basis: 50%;
 }
 
 .box .container .body .box-try .image img {
-    max-width: 100%;
+  max-width: 100%;
 }
 .box .container .body .text {
-    flex-basis: 50%;
-    flex-basis: 50%;
-    padding: 40px;
+  flex-basis: 50%;
+  flex-basis: 50%;
+  padding: 40px;
 }
 .box .container .body .text h2 {
-    color: white;
-    font-size: 42px;
-    margin: 0;
+  color: white;
+  font-size: 42px;
+  margin: 0;
 }
 .box .container .body .text p {
-    color: aliceblue;
-    font-size: 18.8px;
+  color: aliceblue;
+  font-size: 18.8px;
 }
 .box .container .body .text button {
-    color: #777;
-    padding: 12px 50px;
-    font-size: 20px;
-    border-radius: 30px;
-    transition: .5s;
-    border: 1px solid;
-    -webkit-border-radius: 30px;
-    -moz-border-radius: 30px;
-    -ms-border-radius: 30px;
-    -o-border-radius: 30px;
+  color: #777;
+  padding: 12px 50px;
+  font-size: 20px;
+  border-radius: 30px;
+  transition: 0.5s;
+  border: 1px solid;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
 }
 
 .box .container .body .text button:hover {
-    background-color: hsl(300, 69%, 71%);
+  background-color: var(--Soft-Magenta);
 }
-.box .container .foot .social {
-    list-style: none;
-    display: flex;
-    position: absolute;
-    right: 25px;
-    bottom: -5px;
+.box .container footer .social {
+  list-style: none;
+  display: flex;
+  position: absolute;
+  right: 25px;
+  bottom: -5px;
 }
-.box .container .foot .social li a{
-    width: 20px;
-    height: 20px;
-    border: 1px solid white;
-    display: block;
-    margin-left: 5px;
-    border-radius: 50%;
-    padding: 5px;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
+.box .container footer .social li,
+.box .container .body .text button,
+.box .container header .image img {
+  cursor: pointer;
 }
 
-.box .container .foot .social li a i{
-    color: white;
+.box .container footer .social li a {
+  width: 34px;
+  height: 34px;
+  border: 1px solid white;
+  display: block;
+  margin-left: 5px;
+  border-radius: 50%;
+  padding: 5px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  transition: 0.5s;
+}
+
+.box .container footer .social li a i {
+  color: white;
+  font-size: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 3px;
+  transition: 0.5s;
+}
+
+.box .container footer .social li:first-of-type:hover a,
+.box .container footer .social li:first-of-type:hover a i {
+  border-color: blue;
+  color: blue;
+}
+
+.box .container footer .social li:nth-of-type(2):hover a,
+.box .container footer .social li:nth-of-type(2):hover a i {
+  border-color: rgb(123 251 243);
+  color: rgb(123 251 243);
+}
+
+.box .container footer .social li:nth-of-type(3):hover a,
+.box .container footer .social li:nth-of-type(3):hover a i {
+  border-color: red;
+  color: red;
+}
+
+@media (max-width: 767px) {
+  .box {
+    background-image: url(../images/bg-mobile.svg);
+    height: 100vh;
+  }
+
+  .box .container .body {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .box .container .body .text h2 {
+    font-size: 26px;
+    color: hsl(295.25deg 67.15% 59.41%);
+  }
+
+  .box .container .body .text p {
     font-size: 15px;
-    display: flex;
+    line-height: 1.8;
+    color: black;
+    font-weight: bold;
+  }
+
+  .box .container .body .text button {
+    border: 1px solid;
+    width: 75%;
+    margin-top: 6px;
+  }
+
+  .box .container .body .text {
+    padding: 40px 40px 0;
+  }
+
+  .box .container footer .social {
     justify-content: center;
-    align-items: center;
-    padding-top: 3px;
-} 
-
-
-@media(max-width:767px) {
-    .box {
-        background-image: url(../images/bg-mobile.svg);
-        height: 100vh;
-    }
-
-    .box .container .body {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .box .container .body .text h2 {
-        font-size: 26px;
-        color: hsl(295.25deg 67.15% 59.41%);
-    }
-
-    .box .container .body .text p {
-        font-size: 15px;
-        line-height: 1.8;
-        color: black;
-        font-weight: bold;
-    }
-
-    .box .container .body .text button {
-        border: 1px solid;
-        width: 75%;
-        margin-top: 6px;
-    }
-
-    .box .container .body .text {
-        padding: 40px 40px 0;
-    }
-
-    .box .container .foot .social {
-        justify-content: center;
-        left: 45%;
-        bottom: 20px;
-        transform: translateX(-50%);
-    }
+    left: 45%;
+    bottom: 20px;
+    transform: translateX(-50%);
+  }
 }
